# cloud-custodian

./: .azure-pipelines.yml  .dockerignore  .envrc  .gitignore  .tool-versions  Makefile  README.rst  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
c7n/: actions.py  cli.py  commands.py  config.py  credentials.py  handler.py  loader.py  manager.py  policy.py  provider.py  query.py  resolver.py  schema.py  tags.py  utils.py
docker/: c7n  c7n-distroless  c7n-kube  c7n-kube-distroless  c7n-org  c7n-org-distroless  cli  cli-distroless  mailer  mailer-distroless  org  org-distroless  policystream  policystream-distroless
docs/: .buildinfo  Makefile.sphinx  actions.html  contribute.html  deployment.html  filters.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
tests/: common.py  test_account.py  test_ami.py  test_asg.py  test_cli.py  test_cloudtrail.py  test_doc_examples.py  test_docker.py  test_dynamodb.py  test_ebs.py  test_ec2.py  test_ecs.py  test_elasticsearch.py  test_emr.py  test_filters.py  test_fsx.py  test_iam.py  test_loader.py  test_locked.py  test_manager.py  test_mu.py  test_notify.py  test_offhours.py  test_output.py  test_packaging.py  test_policy.py  test_provider.py  test_rds.py  test_resolver.py  test_s3.py  (+7 more)
tools/c7n_snowflake/: README.md  pyproject.toml
tools/c7n_snowflake/c7n_snowflake/: entry.py  provider.py  query.py  session.py  utils.py
tools/c7n_snowflake/c7n_snowflake/actions/: base.py  tags.py
tools/c7n_snowflake/c7n_snowflake/resources/: resource_map.py  role.py  warehouse.py
(+1757 files in other folders)
